# common_drone_pkgs

./: README.md
drone_global_planner/: CMakeLists.txt  package.xml
drone_global_planner/cfg/: globalCfg.cfg
drone_global_planner/scripts/: debug_tools.py  geometry_tools.py  global_planner.py  modes.py  sonar_tools.py
drone_reg/cfg/: pid_params_laba.yaml
drone_statistics/scripts/: plotter.py
ground_control/rviz/: slam.rviz
image_pose_estimation/launch/: image_pose_estimation.launch
image_pose_estimation/src/: image_pose_estimation.py  image_processing.py
stereo_image_proc/: CMakeLists.txt
stereo_image_proc/cfg/: Disparity.cfg
stereo_image_proc/include/stereo_image_proc/: processor.h
stereo_image_proc/launch/: stereo_image_proc.launch
stereo_image_proc/src/libstereo_image_proc/: processor.cpp
stereo_image_proc/src/nodelets/: disparity.cpp  point_cloud2.cpp
stereo_image_proc/src/nodes/: stereo_image_proc.cpp
waypoints_switcher/: CMakeLists.txt  package.xml
waypoints_switcher/scripts/: waypoint_switcher_node.py  waypoints.txt
window_detector/: CMakeLists.txt  package.xml  setup.py
window_detector/cfg/: WindowDetector.cfg
window_detector/scripts/window_detector/: window_detector.py
window_detector/src/: window_detector_debug.h  window_detector_real.cpp  window_detector_real_2.cpp  window_detector_real_3.cpp
window_detector_sonar/: CMakeLists.txt  package.xml
window_detector_sonar/scripts/: detector_tools.py  find_window_sonar.py
